Doc: Babylon is the current protocol

--- a/docs/protocols/004_Pt24m4xi.rst
+++ b/docs/protocols/004_Pt24m4xi.rst
@@ -1,7 +1,7 @@
 .. _004_Pt24m4xi:
 
-Protocol 004_Pt24m4xi
-=====================
+Protocol 004_Pt24m4xi Athens
+============================
 
 The main changes in this protocol are:
 
