--- a/docs/releases/may-2019.rst
+++ b/docs/releases/may-2019.rst
@@ -15,7 +15,7 @@ old storage can be as long as 15 minutes on a hdd, <4 minutes on a
 ssd, while a node from a full snapshot takes less than 5 minutes on
 hdd, <40 seconds on ssd.
 This is due to our current storage backend that will be improved in the
-`near future <https://tarides.com/blog/2019-05-13-on-the-road-to-irmin-v2.html>`_.
+`near future <https://tarides.com/blog/2019-05-13-on-the-road-to-irmin-v2/>`_.
 
 
 Storage Migration
