Doc: old protos work well with bisect_ppx2.4.1

--- a/_coverage_output/README
+++ b/_coverage_output/README
@@ -5,7 +5,7 @@ Examples:
   ./scripts/instrument_dune_bisect.sh src/lib_p2p/dune
   ./scripts/instrument_dune_bisect.sh src/proto_alpha/lib_protocol/dune.inc
   ./scripts/instrument_dune_bisect.sh src/proto_alpha/ vendors/
-  ./scripts/instrument_dune_bisect.sh . --except src/proto_00*
+  ./scripts/instrument_dune_bisect.sh . --except src/lib_crypto
 
 NOTE: this file is kept present here to make sure the directory
       _coverage_output exists.  This is where coverage data will be collected
