--- a/docs/protocols/008_edo.rst
+++ b/docs/protocols/008_edo.rst
@@ -1,8 +1,11 @@
 .. _008_edo:
 .. _proto-008: https://gitlab.com/metastatedev/tezos/-/tree/proto-008
 
-Protocol 008_PtEdoTez Edo
+Protocol 008_PtEdo2Zk Edo
 =========================
+
+**Important: revision 008_PtEdoTez of protocol Edo contains a bug that
+ is corrected in the latest version 008_PtEdo2Kt**
 
 This page contains all the relevant information for protocol 008 Edo.
 Each of the main changes is briefly described with links to relevant
@@ -12,9 +15,10 @@ operations.
 The changelog section contains all the Merge Requests and instructions
 to regenerate the protocol sources from the Gitlab branch.
 
-The code can be found in the Gitlab branch `proto-008`_ or in the
-release 8.0~rc2 and its full hash is
-``PtEdoTezd3RHSC31mpxxo1npxFjoWWcFgQtxapi51Z8TLu6v6Uq``.
+The code can be found in the Gitlab branch `master`_ or in the release
+8.2 and its full hash is
+``PtEdo2ZkT9oKpimTah6x2embF25oss54njMuPzkJTEi5RqfdZFA``.
+
 As usual a :ref:`testnet <test-networks>` called `Edonet` will be available
 during the full lifetime of the protocol.
 
