--- a/docs/protocols/008_edo.rst
+++ b/docs/protocols/008_edo.rst
@@ -5,7 +5,7 @@ Protocol 008_PtEdo2Zk Edo
 =========================
 
 **Important: revision 008_PtEdoTez of protocol Edo contains a bug that
- is corrected in the latest version 008_PtEdo2Kt**
+is corrected in the latest version 008_PtEdo2Kt**
 
 This page contains all the relevant information for protocol 008 Edo.
 Each of the main changes is briefly described with links to relevant
@@ -15,7 +15,7 @@ operations.
 The changelog section contains all the Merge Requests and instructions
 to regenerate the protocol sources from the Gitlab branch.
 
-The code can be found in the Gitlab branch `master`_ or in the release
+The code can be found in the Gitlab branch `master` or in the release
 8.2 and its full hash is
 ``PtEdo2ZkT9oKpimTah6x2embF25oss54njMuPzkJTEi5RqfdZFA``.
 
